nginx-deployment.yaml
# This YAML exposes the fields defined in the UI. It can be edited directly or have new YAML pasted in.
# Not all available Kubernetes properties are recognized by the form exposed in the UI, and unrecognized properties are ignored during import.
# If the required properties are not supported by this step, the 'Deploy raw Kubernetes YAML' step can be used to deploy YAML directly to Kubernetes, and supports all properties.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment	
  labels:
    app: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx-deployment
  replicas: 1
  template:
    metadata:
        labels:
            app: nginx-deployment
    spec:
        containers:
        - name: nginx
          image: carytakeshi/nginx-local:latest
          ports:
          - name: http-port
            containerPort: 80
