apache-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: apache-service
spec:
    selector: 
        app: httpd-deployment
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
