nginx-service2.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx-service2
spec:
    selector: 
        app: nginx-deployment
    ports:
        - protocol: TCP
          port: 9090
          targetPort: 80
